<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculator_app"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:layout_centerHorizontal="true"
        android:padding="15dp"/>

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_first_number"
        android:gravity="center"
        android:inputType="number"
        android:layout_below="@+id/textView"
        android:layout_marginTop="20dp"
        android:textColorHint="@color/material_dynamic_neutral_variant80"
        android:textStyle="italic"
        android:autofillHints="" />
    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_second_number"
        android:gravity="center"
        android:layout_below="@id/editText1"
        android:layout_marginTop="15dp"
        android:inputType="number"
        android:textColorHint="@color/material_dynamic_neutral_variant80"
        android:textStyle="italic"
        android:autofillHints="" />

    <Button
        android:id="@+id/button1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/addition"
        android:backgroundTint="@color/design_default_color_primary"
        android:layout_below="@+id/editText2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>
    <Button
        android:id="@+id/button2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/subtraction"
        android:backgroundTint="@color/design_default_color_primary"
        android:layout_below="@+id/button1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>
    <Button
        android:id="@+id/button3"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/division"
        android:backgroundTint="@color/design_default_color_primary"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>
    <Button
        android:id="@+id/button4"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/multiplication"
        android:backgroundTint="@color/design_default_color_primary"
        android:layout_below="@+id/button3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/answer"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:layout_below="@id/button4"
        android:textColorHint="@color/material_dynamic_neutral_variant80"
        android:textStyle="italic"
        android:autofillHints=""
        android:inputType="number" />

</RelativeLayout>
